# cube3D

./: @TODO  CMakeLists.txt  Makefile  README.md  tilemap
.devcontainer/: devcontainer.jason
include/: ansi.h  cub3d.h  cube3d.h  rad.h  respath.h  tests.h
res/: level.cub  level0.cub  level_peinsula.cub  level_peninsula.cub  level_test.cub  test_level0.cub
sandbox/: copy_tilemap.c  copymap.c  floodfill .c  level.cub  tilemap.c
src/: assets_manager.c  background.c  datamodel.c  free.c  input.c  intutils.c  main.c  math_utils.c  memutils.c  player.c  raycaster.c  strutils.c  strutils2.c  utils.c
src/_background/: bg_setup.c
src/_datamodel/: datamodel.c  dm_check_colors.c  dm_check_tex_files.c  dm_check_tilemap.c  dm_load_colors.c  dm_load_player_data.c  dm_load_tex_path.c  dm_load_tilemap.c  dm_populate_columns.c  dm_setup.c  dm_tilemap.c  tilemap.c
src/_minimap/: mm_draw.c  mm_setup.c
src/_pixels/: colors.c
src/_player/: pl_input.c  pl_move.c
src/_raycast/: rc_ray.c
src/_test/: test_dm_load_tex_path.c  test_dm_load_tilemap.c
src/_utils/: ut_degrees.c  ut_files.c  ut_lists.c  ut_math.c  ut_memory.c  ut_print.c
src/_walls/: wall_draw.c  wall_setup.c
src/assets_manager/: assets_manager.c  dm_check_textures.c  dm_load_colors.c  dm_load_textures.c  dm_load_tilemap.c
src/libft/: Makefile
src/test/: test_dm_check_colors.c  testing.c  (+5 more)
test/: test_asset_manager.c  test_data_model_manager.c  test_raycast-manager.c  test_window_manager.c
tests/: Makefile  assets_manager_tests.c  c3dtests.c  c3dtests.h  resources_tests.c  test  tests.c  tests.h
(+14 files in other folders)
